Bug 203546 [prov][engine] Test cases in engine for uninstall / update / rollback